--- a/src/index.css
+++ b/src/index.css
@@ -317,3 +317,13 @@ body:not(.user-is-tabbing) a:focus {
     padding: var(--gutter-medium) 0;
   }
 }
+
+.starlight {
+  top: 0;
+  position: absolute;
+}
+
+.about-me {
+  height: 100vh;
+  width: 100%;
+}
