--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -4,4 +4,5 @@
     justify-content: left;
     gap: 20px; /* Add space between the items */
     padding: 20px; /* Add some padding around the container */
+    margin: 10px;
 }
